--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
     />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="stylesheet" href="/styles.css"> 
   </head>
   <body>
     <app-root></app-root>
